--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header>
-      <nav class="container">
-        <img src="img/logo.png" width="141" height="60" alt="Логотип MontStroy">
+    <header class="main-header">
+      <nav class="container top-menu">
+        <a><img src="img/logo.png" width="141" height="60" alt="Логотип MontStroy"></a>
         <ul class="site-navigation">
-          <li><a href="#">главная</a></li>
+          <li><a>главная</a></li>
           <li><a href="#">услуги</a></li>
           <li><a href="#">проекты</a></li>
           <li><a href="#">партнеры</a></li>
@@ -37,25 +37,22 @@
             <li><a class="btn btn-black" href="#write_us">связаться с нами</a></li>
           </ul>
 
-          <div class="features">
-            <div class="block">
-              <img src="img/like.png" width="62" height="64" alt="like">
-              <p>Гарантированное высокое качество продукции</p>
-            </div>
-            <div class="block">
-              <img src="img/handshake.png" width="74" height="49" alt="handshake">
-              <p>Исполнение всех сроков и обязательств</p>
-            </div>
-            <div class="block">
-              <img src="img/settings.png" width="70" height="69" alt="settings">
-              <p>Собственная производственная база</p>
-            </div>
-          </div>
+          <ul class="features">
+            <li class="block">
+              Гарантированное высокое качество продукции
+            </li>
+            <li class="block">
+              Исполнение всех сроков и обязательств
+            </li>
+            <li class="block">
+              Собственная производственная база
+            </li>
+          </ul>
         </div>
       </section>
 
       <div class="container">
-        <section id="services">
+        <section id="services" class="services">
           <h2>услуги</h2>
           <ul class="service-block">
             <li>
@@ -208,8 +205,8 @@
         <iframe src="https://yandex.ru/map-widget/v1/-/CCfj62zK" height="810"></iframe>
       </section>
     </main>
-    <footer>
-      <section id="write_us">
+    <footer class="main-footer">
+      <section id="write_us" class="feedback">
         <h2>свяжитесь с нами</h2>
         <form class="feedback-form">
           <div class="user-name">
