--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="#">контакты</a></li>
         </ul>
         <ul class="contacts">
-          <li>+7 (495) 452-67-23</li>
+          <li><a href="tel:+74954526723">+7 (495) 452-67-23</a></li>
           <li><a class="btn" href="#write_us">Обратная связь</a></li>
         </ul>
       </nav>
@@ -32,7 +32,7 @@
             и за это время зарекомендовала себя как ведущий разработчик качественных систем установок для предприятий, выполняет
             полный комплекс строительно-монтажных и&nbsp;пуско-наладочных работ по электроснабжению зданий и сооружений.
           </p>
-          <ul>
+          <ul class="contact-buttons">
             <li><a class="btn" href="#services">наши услуги</a></li>
             <li><a class="btn btn-black" href="#write_us">связаться с нами</a></li>
           </ul>
