--- a/index.html
+++ b/index.html
@@ -149,46 +149,46 @@
           <h2>проекты</h2>
 
           <div class="project-list">
-            <div class="project project-1">
+            <div class="project project-col1 project-1">
               <strong>Стадион «Футур»</strong>
               <p>В целях обеспечения электроэнергией стадиона специалистами было осуществлено строительство распределительной сети мощностью 20кВ</p>
-              <a class="btn-next" href="#">&#8594;</a>
+              <a class="btn-arrow" href="#">&#8594;</a>
             </div>
-            <div class="project project-2">
+            <div class="project project-col1 project-2">
               <strong>Бизнес-центр «Ореол»</strong>
               <p>Специалисты провели масштабную работу по организации АСКУЭ на 694 точки учета комплекса с апартаментами</p>
-              <a class="btn-next" href="#">&#8594;</a>
+              <a class="btn-arrow" href="#">&#8594;</a>
             </div>
-            <div class="project project-3">
+            <div class="project project-col1 project-3">
               <strong>Кинотеатр «Семейный»</strong>
               <p>Специалисты выполнили комплекс работ по системам учета электроэнергии</p>
-              <a class="btn-next" href="#">&#8594;</a>
+              <a class="btn-arrow" href="#">&#8594;</a>
             </div>
-            <div class="project project-4">
+            <div class="project project-col1 project-4">
               <strong>ТК «Medial»</strong>
               <p>В целях обеспечения электроэнергией телевизионного комплекса было осуществлено строительство распределительной сети мощностью 20кВ</p>
-              <a class="btn-next" href="#">&#8594;</a>
+              <a class="btn-arrow" href="#">&#8594;</a>
             </div>
-            <div class="project project-5">
+            <div class="project project-col2 project-5">
               <strong>ОАО «ЭнергоНацКомпани»</strong>
               <p>Компанией были выполнены строительно-монтажные и пусконаладочные работы, а также поставлены материалы и оборудование при осуществлении
                   ремонта электросетевого имущества кабельных линий 220кВ для ОАО «ЭнергоНацКомпани»
               </p>
-              <a class="btn-next" href="#">&#8594;</a>
+              <a class="btn-arrow" href="#">&#8594;</a>
             </div>
-            <div class="project project-6">
+            <div class="project project-col2 project-6">
               <strong>Театр «Буратино»</strong>
               <p>Специалистами были проведены комплексные электро-монтажные и пусконаладочные работы по механизации сценических подъемников в
                 здании театра
               </p>
-              <a class="btn-next" href="#">&#8594;</a>
+              <a class="btn-arrow" href="#">&#8594;</a>
             </div>
           </div>
         </section>
 
         <section class="partners">
           <h2>партнеры</h2>
-          <div>
+          <div class="slider-buttons">
             <button>&#8592;</button>|<button>&#8594;</button>
           </div>
           <ul class="slider">
