--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
       <section class="advantages">
         <div class="container">
           <h1>строительно-монтажные работы</h1>
-          <p class="about">Компания ЗАО «НCП «МонтCтрой» успешно работает на российском рынке с <span class="teal">1992</span> года,
-            и за это время зарекомендовала себя как ведущий разработчик качественных систем установок для предприятий, выполняет
-            полный комплекс строительно-монтажных и&nbsp;пуско-наладочных работ по электроснабжению зданий и сооружений.
+          <p class="about">
+            Компания ЗАО «НCП «МонтCтрой» успешно работает на российском рынке с <span class="teal">1992</span> года, и за это время зарекомендовала себя как ведущий разработчик качественных систем установок для предприятий, выполняет полный комплекс строительно-монтажных и&nbsp;пуско-наладочных работ по электроснабжению зданий и сооружений.
           </p>
           <ul class="contact-buttons">
             <li><a class="btn" href="#services">наши услуги</a></li>
@@ -57,28 +56,26 @@
           <ul class="service-block">
             <li>
               <div class="service-item">
-                <h4>Проектирование</h4>
+                <h3>Проектирование</h3>
                 <ul>
                   <li><a href="#">Предварительная разработка концепции;</a></li>
                   <li><a href="#">Установка систем энергоснабжения;</a></li>
                   <li><a href="#">Оформление задания на проектирование;</a></li>
                   <li><a href="#">Разработка всей рабочей и проектной документации;</a></li>
                   <li><a href="#">Окончательное согласование проекта энергоснабжения в органах гос.надзора;</a></li>
-                  <li><a href="#">Обеспечения авторского надзора на протяжении всего строительства (контроль за соблюдением всех норм и
-                                  проектных разработок).</a></li>
+                  <li><a href="#">Обеспечения авторского надзора на протяжении всего строительства (контроль за соблюдением всех норм и проектных разработок).</a></li>
                 </ul>
               </div>
             </li>
             <li>
               <div class="service-item">
-                <h4>инженерные изыскания</h4>
+                <h3>инженерные изыскания</h3>
                 <ul>
                   <li><a href="#">Инженерно-геодезические изыскания;</a></li>
                   <li><a href="#">Инженерно-геофизические изыскания;</a></li>
                   <li><a href="#">Инженерно-топографические изыскания;</a></li>
                   <li><a href="#">Инженерно-геологические изыскания;</a></li>
-                  <li><a href="#">Изыскания грунтовых строительных материалов (проведение опытных полевых работ и обследование земляных
-                                  сооружений);</a></li>
+                  <li><a href="#">Изыскания грунтовых строительных материалов (проведение опытных полевых работ и обследование земляных сооружений);</a></li>
                   <li><a href="#">Инженерно-экологические (полевые работы, а также лабораторные и камеральные работы);</a></li>
                   <li><a href="#">Археологические;</a></li>
                   <li><a href="#">Кадастровые и землеустроительные.</a></li>
@@ -87,7 +84,7 @@
             </li>
             <li>
               <div class="service-item">
-                <h4>Строительно-монтажные работы</h4>
+                <h3>Строительно-монтажные работы</h3>
                 <ul>
                   <li><a href="#">Строительство и реконструкция подстанций до 500 кВ и распределительных устройств станций до 500 кВ;</a></li>
                   <li><a href="#">Строительство распределительных пунктов;</a></li>
@@ -100,13 +97,12 @@
             </li>
             <li>
               <div class="service-item">
-                <h4>эксплуатация и сервисное обслуживание</h4>
+                <h3>эксплуатация и сервисное обслуживание</h3>
                 <ul>
                   <li><a href="#">Эксплуатация электрики зданий и энергоустановок, снабжающих энергией эксплуатируемые сооружения;</a></li>
                   <li><a href="#">Эксплуатация систем отопления объектов с проведением плановых сезонных мероприятий</a></li>
                   <li><a href="#">Эксплуатация систем ХВС и ГВС эксплуатируемого здания;</a></li>
-                  <li><a href="#">Сервисное обслуживание и эксплуатация систем водоснабжения, водоподготовки и фильтрации в обслуживаемом
-                              здании;</a></li>
+                  <li><a href="#">Сервисное обслуживание и эксплуатация систем водоснабжения, водоподготовки и фильтрации в обслуживаемом здании;</a></li>
                   <li><a href="#">Обслуживание системы дренажа, канализации и ливнестоков: прочистка, промывка, вывоз отходов за территорию;</a></li>
                   <li><a href="#">Сезонная перенастройка автоматических элементов систем эксплуатации здания и другое.</a></li>
                 </ul>
@@ -114,28 +110,24 @@
             </li>
             <li>
               <div class="service-item">
-                <h4>Электролаборатория</h4>
+                <h3>Электролаборатория</h3>
                 <ul>
                   <li><a href="#">Проверка состояния различных элементов устройств заземления;</a></li>
-                  <li><a href="#">Проверка наличия цепи, проведение замеров сопротивлений (переходных) между заземляющими проводниками
-                    и заземлителями, проверку металловязи;</a></li>
+                  <li><a href="#">Проверка наличия цепи, проведение замеров сопротивлений (переходных) между заземляющими проводниками и заземлителями, проверку металловязи;</a></li>
                   <li><a href="#">Проверка систем молниезащиты;</a></li>
                   <li><a href="#">Измерение сопротивления изоляции электрических кабелей, аппаратов, электропроводок и электрооборудования;</a></li>
                   <li><a href="#">Измерение сопротивления заземления и заземляющих устройств;</a></li>
                   <li><a href="#">Поиск кабельных трасс, мест повреждения и "прожиг кабеля";</a></li>
-                  <li><a href="#">Проведение всех необходимых испытаний и измерений для кабельных линий, включая кабель с изоляцией из сшитого
-                                  полиэтилена до 220 кВ.</a></li>
+                  <li><a href="#">Проведение всех необходимых испытаний и измерений для кабельных линий, включая кабель с изоляцией из сшитого полиэтилена до 220 кВ.</a></li>
                 </ul>
               </div>
             </li>
             <li>
               <div class="service-item">
-                <h4>Услуги по технологическому присоединению</h4>
+                <h3>Услуги по технологическому присоединению</h3>
                 <ul>
-                  <li><a href="#">Оказание технико-экономического консалтинга в составлении договора на технологическое присоединение мощности
-                                потребителя  к сетям электросетевых компаний;</a></li>
-                  <li><a href="#">Обследование присоединяемых устройств ответственным лицом по государственному надзору при участии сетевого
-                                  оператора и собственника устройства;</a></li>
+                  <li><a href="#">Оказание технико-экономического консалтинга в составлении договора на технологическое присоединение мощности потребителя  к сетям электросетевых компаний;</a></li>
+                  <li><a href="#">Обследование присоединяемых устройств ответственным лицом по государственному надзору при участии сетевого оператора и собственника устройства;</a></li>
                   <li><a href="#">Фактическое присоединение объектов заявителя к сетям оператора;</a></li>
                   <li><a href="#">Составление и согласование необъодимой технической документации для ввода в эксплуатацию объекта;</a></li>
                   <li><a href="#">Ввод присоединенного объекта в эксплуатацию.</a></li>
@@ -171,16 +163,12 @@
             </div>
             <div class="project project-col2 project-5">
               <strong>ОАО «ЭнергоНацКомпани»</strong>
-              <p>Компанией были выполнены строительно-монтажные и пусконаладочные работы, а также поставлены материалы и оборудование при осуществлении
-                  ремонта электросетевого имущества кабельных линий 220кВ для ОАО «ЭнергоНацКомпани»
-              </p>
+              <p>Компанией были выполнены строительно-монтажные и пусконаладочные работы, а также поставлены материалы и оборудование при осуществлении ремонта электросетевого имущества кабельных линий 220кВ для ОАО «ЭнергоНацКомпани»</p>
               <a class="btn-arrow" href="#">&#8594;</a>
             </div>
             <div class="project project-col2 project-6">
               <strong>Театр «Буратино»</strong>
-              <p>Специалистами были проведены комплексные электро-монтажные и пусконаладочные работы по механизации сценических подъемников в
-                здании театра
-              </p>
+              <p>Специалистами были проведены комплексные электро-монтажные и пусконаладочные работы по механизации сценических подъемников в здании театра</p>
               <a class="btn-arrow" href="#">&#8594;</a>
             </div>
           </div>
@@ -191,6 +179,7 @@
           <div class="slider-buttons">
             <button>&#8592;</button>|<button>&#8594;</button>
           </div>
+
           <ul class="slider">
             <li><img src="img/promo1.png" alt="partner1" width="270" height="135"></li>
             <li><img src="img/promo2.png" alt="partner2" width="270" height="135"></li>
