--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
         <section class="partners">
           <h2>партнеры</h2>
           <div class="slider-buttons">
-            <button>&#8592;</button>|<button>&#8594;</button>
+            <button>&#8592;</button>
+            <div class="dash"></div>
+            <button>&#8594;</button>
           </div>
 
           <ul class="slider">
