--- a/index.html
+++ b/index.html
@@ -140,53 +140,52 @@
         <section class="projects">
           <h2>проекты</h2>
 
-          <div class="project-list">
-            <div class="project project-col1 project-1">
-              <strong>Стадион «Футур»</strong>
+          <ul class="project-list">
+            <li class="project project-col1 project-1">
+              <h3>Стадион «Футур»</h3>
               <p>В целях обеспечения электроэнергией стадиона специалистами было осуществлено строительство распределительной сети мощностью 20кВ</p>
-              <a class="btn-arrow" href="#">&#8594;</a>
-            </div>
-            <div class="project project-col1 project-2">
-              <strong>Бизнес-центр «Ореол»</strong>
+              <a class="btn-arrow" href="#" aria-label="узнать о проекте">&#8594;</a>
+            </li>
+            <li class="project project-col1 project-2">
+              <h3>Бизнес-центр «Ореол»</h3>
               <p>Специалисты провели масштабную работу по организации АСКУЭ на 694 точки учета комплекса с апартаментами</p>
-              <a class="btn-arrow" href="#">&#8594;</a>
-            </div>
-            <div class="project project-col1 project-3">
-              <strong>Кинотеатр «Семейный»</strong>
+              <a class="btn-arrow" href="#" aria-label="узнать о проекте">&#8594;</a>
+            </li>
+            <li class="project project-col1 project-3">
+              <h3>Кинотеатр «Семейный»</h3>
               <p>Специалисты выполнили комплекс работ по системам учета электроэнергии</p>
-              <a class="btn-arrow" href="#">&#8594;</a>
-            </div>
-            <div class="project project-col1 project-4">
-              <strong>ТК «Medial»</strong>
+              <a class="btn-arrow" href="#" aria-label="узнать о проекте">&#8594;</a>
+            </li>
+            <li class="project project-col1 project-4">
+              <h3>ТК «Medial»</h3>
               <p>В целях обеспечения электроэнергией телевизионного комплекса было осуществлено строительство распределительной сети мощностью 20кВ</p>
-              <a class="btn-arrow" href="#">&#8594;</a>
-            </div>
-            <div class="project project-col2 project-5">
-              <strong>ОАО «ЭнергоНацКомпани»</strong>
+              <a class="btn-arrow" href="#" aria-label="узнать о проекте">&#8594;</a>
+            </li>
+            <li class="project project-col2 project-5">
+              <h3>ОАО «ЭнергоНацКомпани»</h3>
               <p>Компанией были выполнены строительно-монтажные и пусконаладочные работы, а также поставлены материалы и оборудование при осуществлении ремонта электросетевого имущества кабельных линий 220кВ для ОАО «ЭнергоНацКомпани»</p>
-              <a class="btn-arrow" href="#">&#8594;</a>
-            </div>
-            <div class="project project-col2 project-6">
-              <strong>Театр «Буратино»</strong>
+              <a class="btn-arrow" href="#" aria-label="узнать о проекте">&#8594;</a>
+            </li>
+            <li class="project project-col2 project-6">
+              <h3>Театр «Буратино»</h3>
               <p>Специалистами были проведены комплексные электро-монтажные и пусконаладочные работы по механизации сценических подъемников в здании театра</p>
-              <a class="btn-arrow" href="#">&#8594;</a>
-            </div>
-          </div>
+              <a class="btn-arrow" href="#" aria-label="узнать о проекте">&#8594;</a>
+            </li>
+          </ul>
         </section>
 
         <section class="partners">
           <h2>партнеры</h2>
           <div class="slider-buttons">
-            <button>&#8592;</button>
-            <div class="dash"></div>
-            <button>&#8594;</button>
+            <button type="button" class="prev" aria-label="предыдущий">&#8592;</button>
+            <button type="button" aria-label="следующий">&#8594;</button>
           </div>
 
           <ul class="slider">
-            <li><img src="img/promo1.png" alt="partner1" width="270" height="135"></li>
-            <li><img src="img/promo2.png" alt="partner2" width="270" height="135"></li>
-            <li><img src="img/promo3.png" alt="partner3" width="270" height="135"></li>
-            <li><img src="img/promo4.png" alt="partner4" width="270" height="135"></li>
+            <li><a href="#"><img src="img/promo1.png" alt="partner1" width="270" height="135"></a></li>
+            <li><a href="#"><img src="img/promo2.png" alt="partner2" width="270" height="135"></a></li>
+            <li><a href="#"><img src="img/promo3.png" alt="partner3" width="270" height="135"></a></li>
+            <li><a href="#"><img src="img/promo4.png" alt="partner4" width="270" height="135"></a></li>
           </ul>
         </section>
       </div>
