форма по макету

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="utf-8">
@@ -200,21 +200,11 @@
         <h2>свяжитесь с нами</h2>
         <form class="feedback-form">
           <div class="user-name">
-            <label>Имя
-              <input type="text" name="name" required>
-            </label>
-
-            <label>Телефон
-              <input type="tel" name="phone" required>
-            </label>
+            <label>Имя<input type="text" name="name" required></label>
+            <label>Телефон<input type="tel" name="phone" required></label>
           </div>
-          <label>E-mail
-            <input type="email" name="email" required>
-          </label>
-
-          <label>Сообщение
-            <input type="text" name="message" required>
-          </label>
+          <label>E-mail<input type="email" name="email" required></label>
+          <label>Сообщение<input type="text" name="message" required></label>
 
           <p class="small">Заполняя форму на сайте, вы соглашаетесь с нашей <a href="#" class="confidentiality">Политикой&nbsp;конфиденциальности</a></p>
           <button type="submit">Отправить</button>
@@ -240,8 +230,8 @@
             <li class="hours">Ежедневно с 9:00 до 18:00</li>
           </ul>
         </section>
-        <p class="copyright">1992-2018 © ЗАО “НСП ”МонтСтрой”. Все права защищены</p>
       </div>
+      <p class="copyright">1992-2018 © ЗАО “НСП ”МонтСтрой”. Все права защищены</p>
     </footer>
   </body>
 </html>
