--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
             <a><img src="img/logo.png" width="141" height="60" alt="Логотип MontStroy"></a>
             <p>ЗАО «НCП «МонтCтрой»</p>
             <ul class="social-buttons">
-              <li><a href="#" aria-label="Вконтакте"></a></li>
-              <li><a href="#" aria-label="twitter"></a></li>
-              <li><a href="#" aria-label="facebook"></a></li>
+              <li><a href="#" class="social-vk" aria-label="Вконтакте"></a></li>
+              <li><a href="#" class="social-tw" aria-label="twitter"></a></li>
+              <li><a href="#" class="social-fb" aria-label="facebook"></a></li>
             </ul>
           </div>
           <ul class="coordinates">
