--- a/index.html
+++ b/index.html
@@ -54,85 +54,73 @@
         <section id="services" class="services">
           <h2>услуги</h2>
           <ul class="service-block">
-            <li>
-              <div class="service-item">
-                <h3>Проектирование</h3>
-                <ul>
-                  <li><a href="#">Предварительная разработка концепции;</a></li>
-                  <li><a href="#">Установка систем энергоснабжения;</a></li>
-                  <li><a href="#">Оформление задания на проектирование;</a></li>
-                  <li><a href="#">Разработка всей рабочей и проектной документации;</a></li>
-                  <li><a href="#">Окончательное согласование проекта энергоснабжения в органах гос.надзора;</a></li>
-                  <li><a href="#">Обеспечения авторского надзора на протяжении всего строительства (контроль за соблюдением всех норм и проектных разработок).</a></li>
-                </ul>
-              </div>
+            <li class="service-item">
+              <h3>Проектирование</h3>
+              <ul>
+                <li><a href="#">Предварительная разработка концепции;</a></li>
+                <li><a href="#">Установка систем энергоснабжения;</a></li>
+                <li><a href="#">Оформление задания на проектирование;</a></li>
+                <li><a href="#">Разработка всей рабочей и проектной документации;</a></li>
+                <li><a href="#">Окончательное согласование проекта энергоснабжения в органах гос.надзора;</a></li>
+                <li><a href="#">Обеспечения авторского надзора на протяжении всего строительства (контроль за соблюдением всех норм и проектных разработок).</a></li>
+              </ul>
             </li>
-            <li>
-              <div class="service-item">
-                <h3>инженерные изыскания</h3>
-                <ul>
-                  <li><a href="#">Инженерно-геодезические изыскания;</a></li>
-                  <li><a href="#">Инженерно-геофизические изыскания;</a></li>
-                  <li><a href="#">Инженерно-топографические изыскания;</a></li>
-                  <li><a href="#">Инженерно-геологические изыскания;</a></li>
-                  <li><a href="#">Изыскания грунтовых строительных материалов (проведение опытных полевых работ и обследование земляных сооружений);</a></li>
-                  <li><a href="#">Инженерно-экологические (полевые работы, а также лабораторные и камеральные работы);</a></li>
-                  <li><a href="#">Археологические;</a></li>
-                  <li><a href="#">Кадастровые и землеустроительные.</a></li>
-                </ul>
-              </div>
+            <li class="service-item">
+              <h3>инженерные изыскания</h3>
+              <ul>
+                <li><a href="#">Инженерно-геодезические изыскания;</a></li>
+                <li><a href="#">Инженерно-геофизические изыскания;</a></li>
+                <li><a href="#">Инженерно-топографические изыскания;</a></li>
+                <li><a href="#">Инженерно-геологические изыскания;</a></li>
+                <li><a href="#">Изыскания грунтовых строительных материалов (проведение опытных полевых работ и обследование земляных сооружений);</a></li>
+                <li><a href="#">Инженерно-экологические (полевые работы, а также лабораторные и камеральные работы);</a></li>
+                <li><a href="#">Археологические;</a></li>
+                <li><a href="#">Кадастровые и землеустроительные.</a></li>
+              </ul>
             </li>
-            <li>
-              <div class="service-item">
-                <h3>Строительно-монтажные работы</h3>
-                <ul>
-                  <li><a href="#">Строительство и реконструкция подстанций до 500 кВ и распределительных устройств станций до 500 кВ;</a></li>
-                  <li><a href="#">Строительство распределительных пунктов;</a></li>
-                  <li><a href="#">Внедрение систем автоматизации управления оборудованием подстанций до 500 кВ;</a></li>
-                  <li><a href="#">Вынос действующих кабелей из строительной зоны;</a></li>
-                  <li><a href="#">Обеспечение временного электроснабжения;</a></li>
-                  <li><a href="#">Монтаж электрооборудования.</a></li>
-                </ul>
-              </div>
+            <li class="service-item">
+              <h3>Строительно-монтажные работы</h3>
+              <ul>
+                <li><a href="#">Строительство и реконструкция подстанций до 500 кВ и распределительных устройств станций до 500 кВ;</a></li>
+                <li><a href="#">Строительство распределительных пунктов;</a></li>
+                <li><a href="#">Внедрение систем автоматизации управления оборудованием подстанций до 500 кВ;</a></li>
+                <li><a href="#">Вынос действующих кабелей из строительной зоны;</a></li>
+                <li><a href="#">Обеспечение временного электроснабжения;</a></li>
+                <li><a href="#">Монтаж электрооборудования.</a></li>
+              </ul>
             </li>
-            <li>
-              <div class="service-item">
-                <h3>эксплуатация и сервисное обслуживание</h3>
-                <ul>
-                  <li><a href="#">Эксплуатация электрики зданий и энергоустановок, снабжающих энергией эксплуатируемые сооружения;</a></li>
-                  <li><a href="#">Эксплуатация систем отопления объектов с проведением плановых сезонных мероприятий</a></li>
-                  <li><a href="#">Эксплуатация систем ХВС и ГВС эксплуатируемого здания;</a></li>
-                  <li><a href="#">Сервисное обслуживание и эксплуатация систем водоснабжения, водоподготовки и фильтрации в обслуживаемом здании;</a></li>
-                  <li><a href="#">Обслуживание системы дренажа, канализации и ливнестоков: прочистка, промывка, вывоз отходов за территорию;</a></li>
-                  <li><a href="#">Сезонная перенастройка автоматических элементов систем эксплуатации здания и другое.</a></li>
-                </ul>
-              </div>
+            <li class="service-item">
+              <h3>эксплуатация и сервисное обслуживание</h3>
+              <ul>
+                <li><a href="#">Эксплуатация электрики зданий и энергоустановок, снабжающих энергией эксплуатируемые сооружения;</a></li>
+                <li><a href="#">Эксплуатация систем отопления объектов с проведением плановых сезонных мероприятий</a></li>
+                <li><a href="#">Эксплуатация систем ХВС и ГВС эксплуатируемого здания;</a></li>
+                <li><a href="#">Сервисное обслуживание и эксплуатация систем водоснабжения, водоподготовки и фильтрации в обслуживаемом здании;</a></li>
+                <li><a href="#">Обслуживание системы дренажа, канализации и ливнестоков: прочистка, промывка, вывоз отходов за территорию;</a></li>
+                <li><a href="#">Сезонная перенастройка автоматических элементов систем эксплуатации здания и другое.</a></li>
+              </ul>
             </li>
-            <li>
-              <div class="service-item">
-                <h3>Электролаборатория</h3>
-                <ul>
-                  <li><a href="#">Проверка состояния различных элементов устройств заземления;</a></li>
-                  <li><a href="#">Проверка наличия цепи, проведение замеров сопротивлений (переходных) между заземляющими проводниками и заземлителями, проверку металловязи;</a></li>
-                  <li><a href="#">Проверка систем молниезащиты;</a></li>
-                  <li><a href="#">Измерение сопротивления изоляции электрических кабелей, аппаратов, электропроводок и электрооборудования;</a></li>
-                  <li><a href="#">Измерение сопротивления заземления и заземляющих устройств;</a></li>
-                  <li><a href="#">Поиск кабельных трасс, мест повреждения и "прожиг кабеля";</a></li>
-                  <li><a href="#">Проведение всех необходимых испытаний и измерений для кабельных линий, включая кабель с изоляцией из сшитого полиэтилена до 220 кВ.</a></li>
-                </ul>
-              </div>
+            <li class="service-item">
+              <h3>Электролаборатория</h3>
+              <ul>
+                <li><a href="#">Проверка состояния различных элементов устройств заземления;</a></li>
+                <li><a href="#">Проверка наличия цепи, проведение замеров сопротивлений (переходных) между заземляющими проводниками и заземлителями, проверку металловязи;</a></li>
+                <li><a href="#">Проверка систем молниезащиты;</a></li>
+                <li><a href="#">Измерение сопротивления изоляции электрических кабелей, аппаратов, электропроводок и электрооборудования;</a></li>
+                <li><a href="#">Измерение сопротивления заземления и заземляющих устройств;</a></li>
+                <li><a href="#">Поиск кабельных трасс, мест повреждения и "прожиг кабеля";</a></li>
+                <li><a href="#">Проведение всех необходимых испытаний и измерений для кабельных линий, включая кабель с изоляцией из сшитого полиэтилена до 220 кВ.</a></li>
+              </ul>
             </li>
-            <li>
-              <div class="service-item">
-                <h3>Услуги по технологическому присоединению</h3>
-                <ul>
-                  <li><a href="#">Оказание технико-экономического консалтинга в составлении договора на технологическое присоединение мощности потребителя  к сетям электросетевых компаний;</a></li>
-                  <li><a href="#">Обследование присоединяемых устройств ответственным лицом по государственному надзору при участии сетевого оператора и собственника устройства;</a></li>
-                  <li><a href="#">Фактическое присоединение объектов заявителя к сетям оператора;</a></li>
-                  <li><a href="#">Составление и согласование необъодимой технической документации для ввода в эксплуатацию объекта;</a></li>
-                  <li><a href="#">Ввод присоединенного объекта в эксплуатацию.</a></li>
-                </ul>
-              </div>
+            <li class="service-item">
+              <h3>Услуги по технологическому присоединению</h3>
+              <ul>
+                <li><a href="#">Оказание технико-экономического консалтинга в составлении договора на технологическое присоединение мощности потребителя  к сетям электросетевых компаний;</a></li>
+                <li><a href="#">Обследование присоединяемых устройств ответственным лицом по государственному надзору при участии сетевого оператора и собственника устройства;</a></li>
+                <li><a href="#">Фактическое присоединение объектов заявителя к сетям оператора;</a></li>
+                <li><a href="#">Составление и согласование необъодимой технической документации для ввода в эксплуатацию объекта;</a></li>
+                <li><a href="#">Ввод присоединенного объекта в эксплуатацию.</a></li>
+              </ul>
             </li>
           </ul>
         </section>
