--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=1200">
     <title>Компания «МонтCтрой»</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -180,7 +181,7 @@
 
       <section class="map">
         <h2 class="visually-hidden">карта проезда</h2>
-        <iframe src="https://yandex.ru/map-widget/v1/-/CCfj62zK" height="807"></iframe>
+        <iframe src="https://yandex.ru/map-widget/v1/-/CCfj62zK" height="807" scroll="false"></iframe>
       </section>
     </main>
     <footer class="main-footer">
