--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
       <section class="map">
         <h2 class="visually-hidden">карта проезда</h2>
-        <iframe src="https://yandex.ru/map-widget/v1/-/CCfj62zK" height="807" scroll="false"></iframe>
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1ee9c9bccc2eb52997d5980df16f43bb39a79a9de3fcb30bac6ee91c9503f115&amp;width=100%25&amp;height=807&amp;lang=ru_RU&amp;scroll=false"></script>
       </section>
     </main>
     <footer class="main-footer">
